# feature-generation-benchmark

./: .gitignore  404.html  Cargo.toml  README.md  get_spark4.sh  index.html  mkdocs.yml  pyproject.toml  run_comet.sh
.github/workflows/: site.yaml
benchmark_results/: index.html
data-generation/: pyproject.toml
data-generation/python/data_generation/: __init__.py
data-generation/src/: lib.rs
dev_guide/: index.html
docs/: benchmark_results.md  benchmark_results.md.jinja2  dev_guide.md  index.md
impl/: duckdb_case-when.py  duckdb_pivot-known-values.py  duckdb_pivot.py  pandas_pivot.py  polars_pivot-lazy.py  polars_pivot.py  pyspark-case-when.py  pyspark-comet-case-when.py  pyspark-comet-pandas.py  pyspark-comet-pivot.py  pyspark-pandas-udf.py  pyspark-pivot.py  pyspark4-polars-udf.py
notebooks/: Data Vizualization.ipynb  Pandas.ipynb  PySpark Pivot.ipynb  PySpark.ipynb
python/data_generation/: __init__.py  helpers.py
results/: results.json  results_medium.json  results_small.json  results_tiny.json
scripts/: fill_template.py
search/: search_index.json
src/: lib.rs
